# openapi/openapi.yaml
@@ -1,8 +1,108 @@
 openapi: 3.0.0
 info:
-  title: API
-  version: 1.0.0
+  title: User & Task API
+  description: API для работы с пользователями и задачами
+  version: "1.0"
+
 paths:
+  # Endpoints for Users
+  /users:
+    get:
+      summary: Get all users
+      operationId: GetUsers
+      tags:
+        - users
+      responses:
+        '200':
+          description: list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+
+    post:
+      summary: Create new user
+      operationId: PostUser
+      tags:
+        - users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: User successfully created
+
+  /users/{id}:
+    get:
+      summary: Get user by ID
+      operationId: GetUserByID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: User info
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+
+    patch:
+      summary: Update user by ID
+      operationId: PatchUserByID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: User updated
+        '404':
+          description: User not found
+
+    delete:
+      summary: Delete user by ID
+      operationId: DeleteUserByID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: User deleted
+        '404':
+          description: User not found
+
+  # Endpoints for Tasks
   /tasks:
     get:
       summary: Get all tasks
@@ -35,9 +135,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+
   /tasks/{id}:
     patch:
-  summary: Update a task by ID
+      summary: Update a task by ID
       tags:
         - tasks
       parameters:
@@ -100,8 +201,32 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        email:
+          type: string
+          example: user@example.com
+        password:
+          type: string
+          example: "password123"
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        deletedAt:
+          type: string
+          format: date-time
+          nullable: true
+
     Task:
       type: object
       properties:
@@ -112,12 +237,14 @@ components:
           type: string
         is_done:
           type: boolean
+
     UpdateTaskRequest:
       type: object
       properties:
         task:
           type: string
           nullable: true
+
     ErrorResponse:
       type: object
       properties:
